[package]
name = "evolutionmp-client"
version = "0.1.0"
authors = ["Radviger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detour = { version = "*", features = ["nightly"] }
winapi = { git = "https://github.com/Radviger/winapi-rs", branch = "0.3", features = ["winuser", "psapi", "libloaderapi", "winnt", "tlhelp32", "impl-default", "synchapi", "processthreadsapi", "winbase", "handleapi", "securitybaseapi", "memoryapi", "errhandlingapi", "std", "sysinfoapi", "fibersapi", "winerror", "consoleapi", "minwindef", "basetsd", "fileapi", "wincon"] }
winreg = "*"
laminar = "*"
bincode = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
byteorder = "*"
dirs = "*"
lazy_static = "*"
field-offset = "*"
cgmath = { version = "*", features = ["serde"] }
widestring = "*"
jni-dynamic = { git = "https://github.com/Radviger/jni-dynamic-rs", features = ["invocation"] }
chrono = "*"
log = "*"
colored = "*"
fern = { version = "*", features = ["colored"] }
backtrace = { version = "*", features = ["cpp_demangle"] }
ansi_term = "*"
clipboard = "0.5.0"
alignas = "*"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
region = "*"

[[bin]]
name = "launcher"
path = "src/launcher/main.rs"
[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "evolutionmp"
path = "src/evolutionmp/main.rs"
crate_type = ["rlib", "cdylib"]

[profile.dev]
opt-level = 1